fix overflow css to right hidden value

--- a/src/ui/boone-aid-ui/src/App.css
+++ b/src/ui/boone-aid-ui/src/App.css
@@ -1,7 +1,7 @@
 body {
   width: 100%;
   background-color: white;
-  overflow-x: hide;
+  overflow-x: hidden;
 }
 
 .quiet-link:link,
